# superbrain-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  context.rs  lib.rs  main.rs  overlay.rs  state.rs  tray.rs  workflows.rs
src-tauri/src/ai/: claude.rs  mod.rs  ollama.rs
src-tauri/src/brain/: cognitive.rs  embeddings.rs  learning.rs  memory.rs  mod.rs  persistence.rs  types.rs  utils.rs
src-tauri/src/indexer/: chunker.rs  mod.rs  parser.rs  watcher.rs
src/components/: MemoryFeed.tsx  Onboarding.tsx  QuickActions.tsx  ResultsList.tsx  SearchBar.tsx  Settings.tsx
src/hooks/: useBrain.ts
src/store/: appStore.ts
